# HAI-Sensemaking

./: .gitignore  WORKPLAN.md  pyproject.toml  requirements.txt  startup.sh
agents/: registry.yaml
backend/: config.py  effect_error.py  main.py
backend/config/: dimensions.json
backend/orchestrator/: effect_agent_executor.py  pure_registry_loader.py
backend/prompts/: analyse.md  report.md
backend/routes/: analyse.py  export.py  report.py
frontend/: canvas.html  index.html  report.html
frontend/scripts/: config.js  effect.api.js  effect.canvas.js  effect.error.js  effect.export.js  effect.facilitated.js  effect.report.js  effect.state.js  effect.toast.js  main.js  pure.canvas.js  pure.render.js
frontend/styles/: main.css  reset.css
frontend/styles/atoms/: base.css  tokens-semantic.css  tokens.css
frontend/styles/molecules/: badge.css  button.css  card.css  input.css  pill.css  spinner.css  toast.css
frontend/styles/organisms/: action-bar.css  canvas-layout.css  facilitated.css  landing.css  report.css  site-header.css  step-card.css
schemas/: analyse.schema.json  report.schema.json
